<resources>
    <string name="app_name">MVP Barclays</string>
    <string name="team_description">Team Description</string>
    <string name="team_jersey">Team Jersey</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="past_match">Past Match</string>
    <string name="teams">Teams</string>
    <string name="upcoming_match">Upcoming Match</string>
    <string name="loading_error">There is an error when loading teams from the server</string>
    <string name="load_locally">Load Locally</string>
    <string name="title_activity_bottom_navigation">BottomNavigation</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="next_match_detail">Next Match Detail</string>
    <string name="next_list">Next List</string>
    <string name="past_list_detail">Past List Detail</string>
    <string name="past_list">Past List</string>
    <string name="x">X</string>
    <string name="title_activity_tabbed">TabbedActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="overview_tab">Overview Tab</string>
    <string name="lineups_tab">Lineups Tab</string>
    <string name="goal_s">Goal(s)</string>
    <string name="shot_s">Shot(s)</string>
    <string name="red_card_s">Red Card(s)</string>
    <string name="yellow_card_s">Yellow Card(s)</string>
    <string name="goalkeeper">Goalkeeper</string>
    <string name="defense">Defense</string>
    <string name="midfield">Midfield</string>
    <string name="forward">Forward</string>
    <string name="substitutes">Substitutes</string>
    <string name="formation">Formation</string>
</resources>
