<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.MatchDetailLineupsFragment">
    <data>
        <import type="android.text.TextUtils"/>
        <variable
            name="pasts"
            type="com.reihanalavi.mvpbarclays.models.Pasts" />
        <variable
            name="homeForm"
            type="String" />
        <variable
            name="awayForm"
            type="String" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#E8EAF6">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#E8EAF6">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout_lineups_first"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:background="@android:color/white"
                android:padding="16dp"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintLayout_lineups_firstFirst"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent">
                    <TextView
                        android:id="@+id/textView_lineups_goalkeeper"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/goalkeeper"
                        android:textAllCaps="true"
                        android:textColor="@color/colorPrimary"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textView_lineups_homeGoalkeeper"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:textAlignment="textStart"
                        android:textColor="@android:color/black"
                        android:layout_marginEnd="10dp"
                        android:text='@{(TextUtils.isEmpty(pasts.strHomeLineupGoalkeeper) ? "-" : pasts.strHomeLineupGoalkeeper.replace("; ", "\n\n"))}'
                        app:layout_constraintEnd_toStartOf="@id/textView_lineups_goalkeeper"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="Keylor Navas" />

                    <TextView
                        android:id="@+id/textView_lineups_awayGoalkeeper"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:textAlignment="textEnd"
                        android:textColor="@android:color/black"
                        android:layout_marginStart="10dp"
                        android:text='@{(TextUtils.isEmpty(pasts.strAwayLineupGoalkeeper) ? "-" : pasts.strAwayLineupGoalkeeper.replace("; ", "\n\n"))}'
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/textView_lineups_goalkeeper"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="Joel Robles" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintLayout_lineups_firstSecond"
                    android:layout_width="match_parent"
                    android:layout_marginTop="10dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/constraintLayout_lineups_firstFirst">
                    <TextView
                        android:id="@+id/textView_lineups_defense"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/defense"
                        android:textAllCaps="true"
                        android:textColor="@color/colorPrimary"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textView_lineups_homeDefense"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:textAlignment="textStart"
                        android:textColor="@android:color/black"
                        android:layout_marginEnd="10dp"
                        android:text='@{(TextUtils.isEmpty(pasts.strHomeLineupDefense) ? "-" : pasts.strHomeLineupDefense.replace("; ", "\n\n"))}'
                        app:layout_constraintEnd_toStartOf="@id/textView_lineups_defense"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="Daniel Carvajal\nNacho Fernandez\nRaphael Varane\nMarcelo\n" />

                    <TextView
                        android:id="@+id/textView_lineups_awayDefense"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:textAlignment="textEnd"
                        android:textColor="@android:color/black"
                        android:layout_marginStart="10dp"
                        android:text='@{(TextUtils.isEmpty(pasts.strAwayLineupDefense) ? "-" : pasts.strAwayLineupDefense.replace("; ", "\n\n"))}'
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/textView_lineups_defense"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="Francis Guerrero\nMarc Bartra\nZouhair Feddal\nJunior Firpo\n" />
                </androidx.constraintlayout.widget.ConstraintLayout>
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintLayout_lineups_firstThird"
                    android:layout_width="match_parent"
                    android:layout_marginTop="10dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/constraintLayout_lineups_firstSecond">
                    <TextView
                        android:id="@+id/textView_lineups_midfield"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/midfield"
                        android:textAllCaps="true"
                        android:textColor="@color/colorPrimary"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textView_lineups_homeMidfield"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:textAlignment="textStart"
                        android:textColor="@android:color/black"
                        android:layout_marginEnd="10dp"
                        android:text='@{(TextUtils.isEmpty(pasts.strHomeLineupMidfield) ? "-" : pasts.strHomeLineupMidfield.replace("; ", "\n\n"))}'
                        app:layout_constraintEnd_toStartOf="@id/textView_lineups_midfield"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="Luka Modric\nFederico Valverde\nToni Kroos\n" />

                    <TextView
                        android:id="@+id/textView_lineups_awayMidfield"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:textAlignment="textEnd"
                        android:textColor="@android:color/black"
                        android:layout_marginStart="10dp"
                        android:text='@{(TextUtils.isEmpty(pasts.strAwayLineupMidfield) ? "-" : pasts.strAwayLineupMidfield.replace("; ", "\n\n"))}'
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/textView_lineups_midfield"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="Wilfrid Kaptoum\nAndres Guardado\nWilliam Carvalho\nCristian Tello\nGiovani Lo Celso\n" />
                </androidx.constraintlayout.widget.ConstraintLayout>
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintLayout_lineups_firstFourth"
                    android:layout_width="match_parent"
                    android:layout_marginTop="10dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/constraintLayout_lineups_firstThird">
                    <TextView
                        android:id="@+id/textView_lineups_forward"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/forward"
                        android:textAllCaps="true"
                        android:textColor="@color/colorPrimary"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textView_lineups_homeForward"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:textAlignment="textStart"
                        android:textColor="@android:color/black"
                        android:layout_marginEnd="10dp"
                        android:text='@{(TextUtils.isEmpty(pasts.strHomeLineupForward) ? "-" : pasts.strHomeLineupForward.replace("; ", "\n\n"))}'
                        app:layout_constraintEnd_toStartOf="@id/textView_lineups_forward"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="Marco Asensio\nKarim Benzema\nBrahim Diaz\n" />

                    <TextView
                        android:id="@+id/textView_lineups_awayForward"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:textAlignment="textEnd"
                        android:textColor="@android:color/black"
                        android:layout_marginStart="10dp"
                        android:text='@{(TextUtils.isEmpty(pasts.strAwayLineupForward) ? "-" : pasts.strAwayLineupForward.replace("; ", "\n\n"))}'
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/textView_lineups_forward"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="Jese Rodriguez\n" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout_lineups_second"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:background="@android:color/white"
                android:padding="16dp"
                app:layout_constraintTop_toBottomOf="@id/constraintLayout_lineups_first">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintLayout_lineups_secondFirst"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent">
                    <TextView
                        android:id="@+id/textView_lineups_subs"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/substitutes"
                        android:textAllCaps="true"
                        android:textColor="@color/colorPrimary"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textView_lineups_homeSubs"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:textAlignment="textStart"
                        android:textColor="@android:color/black"
                        android:layout_marginEnd="10dp"
                        android:text='@{(TextUtils.isEmpty(pasts.strHomeLineupSubstitutes) ? "-" : pasts.strHomeLineupSubstitutes.replace("; ", "\n\n"))}'
                        app:layout_constraintEnd_toStartOf="@id/textView_lineups_subs"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="Thibaut Courtois\nToni Kroos\nGareth Bale\nLucas Vazquez\nMarco Asensio\nIsco\nSergio Reguilon\n" />

                    <TextView
                        android:id="@+id/textView_lineups_awaySubs"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:textAlignment="textEnd"
                        android:textColor="@android:color/black"
                        android:layout_marginStart="10dp"
                        android:text='@{(TextUtils.isEmpty(pasts.strAwayLineupSubstitutes) ? "-" : pasts.strAwayLineupSubstitutes.replace("; ", "\n\n"))}'
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/textView_lineups_subs"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="Joel Robles\nSergio Leon\nJese Rodriguez\nCristian Tello\nSidnei\nDiego Lainez\nEmerson Junior\n" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout_lineups_third"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@android:color/white"
                android:padding="16dp"
                app:layout_constraintTop_toBottomOf="@id/constraintLayout_lineups_second">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintLayout_lineups_formation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent">
                    <TextView
                        android:id="@+id/textView_lineups_formation"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/formation"
                        android:textAllCaps="true"
                        android:textColor="@color/colorPrimary"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textView_lineups_homeFormation"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:textAlignment="textStart"
                        android:textColor="@android:color/black"
                        android:layout_marginEnd="10dp"
                        android:text="@{homeForm}"
                        app:layout_constraintEnd_toStartOf="@id/textView_lineups_formation"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="4-3-3" />

                    <TextView
                        android:id="@+id/textView_lineups_awayFormation"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:textAlignment="textEnd"
                        android:textColor="@android:color/black"
                        android:layout_marginStart="10dp"
                        android:text="@{awayForm}"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/textView_lineups_formation"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="4-5-1" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>